...
    <item name="viewcompose_button_click_listener" type="id" />
    <item name="viewcompose_pull_refresh_listener" type="id" />
    <item name="viewcompose_modifier_click_listener" type="id" />
    <item name="viewcompose_lazy_spacing_decoration" type="id" />
    <item name="viewcompose_lazy_grid_spacing_decoration" type="id" />
    <item name="viewcompose_lazy_sticky_header_decoration" type="id" />
    <item name="viewcompose_test_tag" type="id" />
    <item name="viewcompose_constraint_layout_id" type="id" />
    <item name="viewcompose_constraint_item_spec" type="id" />
    <item name="viewcompose_original_typeface" type="id" />
    <item name="viewcompose_original_letter_spacing" type="id" />
    <item name="viewcompose_original_line_spacing_extra" type="id" />
    <item name="viewcompose_original_line_spacing_multiplier" type="id" />
...
